--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
 </head>
 
 <body>
+    <header class="banner-container">
+        <div class="banner-content">
+            <img class="banner-image" src="assets/Group.png" alt="Banner Image">
+            <h1 class="banner-title">"In the near future, I hope to become a Developer."</h1>
+            <p class="banner-description">"With a strong passion for technology and coding, I'm on a journey to refining
+                my skills and turning my
+                dream of becoming a developer into reality."</p>
+            <button class="center-button">Contact with me</button>
+        </div>
+    </header>
+    <main>
 
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
