added the web development container

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class="banner-container">
+    <header class="banner-section-container">
         <div class="banner-content">
             <img class="banner-image" src="assets/Group.png" alt="Banner Image">
             <h1 class="banner-title">"In the near future, I hope to become a Developer."</h1>
@@ -20,6 +20,58 @@
         </div>
     </header>
     <main>
+        <!-- Why Web Development Starts Here -->
+        <section class="why-web-development-section-container secondary-bg">
+            <h3 class="section-title">Why Web DEvelopment??</h3>
+            <p class="section-description">Web development empowers creativity and functionality, transforming ideas
+                into interactive digital experiences. It offers endless opportunities for innovation, ensuring websites
+                are not only visually appealing but also user-friendly and accessible. Dive in and start building the
+                web!</p>
+
+            <div class="importance-layer-01 layer-style">
+                <div class="layer-content">
+                    <h6 class="layer-title">I will Do Coding and Change The World</h6>
+                    <p class="layer-description">Harnessing the power of code, I aim to innovate and inspire. Through
+                        creative
+                        web development, I bring ideas to life, crafting digital solutions that make a difference. Join
+                        me on this journey to transform the world, one line at a time.</p>
+                    <button class="layer-btn">Learn More</button>
+                </div>
+                <div class="layer-Image-01">
+                    <img src="assets/Layer_1.png" alt="layer Image">
+                </div>
+            </div>
+
+            <div class="importance-layer-02 layer-style">
+                <div class="layer-Image-02">
+                    <img src="assets/Group 3.png" alt="layer Image">
+                </div>
+                <div class="layer-content">
+                    <h6 class="layer-title">I will help People by creating Modern Web System</h6>
+                    <p class="layer-description">Creating modern web systems enhances user experiences with innovative
+                        designs, seamless functionality, and robust performance. I aim to help people achieve their
+                        digital goals, ensuring their websites are efficient, visually appealing, and tailored to their
+                        unique needs.</p>
+                    <button class="layer-btn">Learn More</button>
+                </div>
+
+            </div>
+
+            <div class="importance-layer-03 layer-style">
+                <div class="layer-content">
+                    <h6 class="layer-title">Empowering Businesses with Cutting-Edge Web Solutions</h6>
+                    <p class="layer-description">Elevate your business with innovative web solutions designed to drive
+                        growth
+                        and enhance user experience. Our expert team delivers tailored, cutting-edge websites that meet
+                        your unique needs, ensuring a powerful online presence and competitive edge.</p>
+                    <button class="layer-btn">Learn More</button>
+                </div>
+                <div class="layer-Image-03">
+                    <img src="assets/Group 4.png" alt="layer Image">
+                </div>
+            </div>
+
+        </section>
 
     </main>
     <footer>
