added the skill container

--- a/index.html
+++ b/index.html
@@ -16,17 +16,22 @@
             <p class="banner-description">"With a strong passion for technology and coding, I'm on a journey to refining
                 my skills and turning my
                 dream of becoming a developer into reality."</p>
-            <button class="center-button">Contact with me</button>
+            <button class="contact-btn">Contact with me</button>
+
         </div>
     </header>
     <main>
         <!-- Why Web Development Starts Here -->
         <section class="why-web-development-section-container secondary-bg">
-            <h3 class="section-title">Why Web DEvelopment??</h3>
-            <p class="section-description">Web development empowers creativity and functionality, transforming ideas
-                into interactive digital experiences. It offers endless opportunities for innovation, ensuring websites
-                are not only visually appealing but also user-friendly and accessible. Dive in and start building the
-                web!</p>
+            <div class="section-content">
+                <h3 class="section-title">Why Web Development??</h3>
+                <p class="section-description">Web development empowers creativity and functionality, transforming ideas
+                    into interactive digital experiences. It offers endless opportunities for innovation, ensuring
+                    websites
+                    are not only visually appealing but also user-friendly and accessible. Dive in and start building
+                    the
+                    web!</p>
+            </div>
 
             <div class="importance-layer-01 layer-style">
                 <div class="layer-content">
@@ -35,7 +40,10 @@
                         creative
                         web development, I bring ideas to life, crafting digital solutions that make a difference. Join
                         me on this journey to transform the world, one line at a time.</p>
-                    <button class="layer-btn">Learn More</button>
+                    <button class="layer-btn">
+                        <a href="https://docode.dev/" target="_blank">Learn More</a>
+                    </button>
+
                 </div>
                 <div class="layer-Image-01">
                     <img src="assets/Layer_1.png" alt="layer Image">
@@ -52,7 +60,9 @@
                         designs, seamless functionality, and robust performance. I aim to help people achieve their
                         digital goals, ensuring their websites are efficient, visually appealing, and tailored to their
                         unique needs.</p>
-                    <button class="layer-btn">Learn More</button>
+                    <button class="layer-btn">
+                        <a href="https://webflow.com/blog/how-to-design-a-website" target="_blank">Learn More</a>
+                    </button>
                 </div>
 
             </div>
@@ -64,13 +74,64 @@
                         growth
                         and enhance user experience. Our expert team delivers tailored, cutting-edge websites that meet
                         your unique needs, ensuring a powerful online presence and competitive edge.</p>
-                    <button class="layer-btn">Learn More</button>
+                    <button class="layer-btn">
+                        <a href="https://websolutions.tech/" target="_blank">Learn More</a>
+                    </button>
                 </div>
                 <div class="layer-Image-03">
                     <img src="assets/Group 4.png" alt="layer Image">
                 </div>
             </div>
+        </section>
+        <!-- My Inspiration Starts Here -->
+        <section class="Inspired-container">
+            <h3 class="section-title">My Inspiration</h3>
+            <p class="section-description">"My inspiration stems from innovative designs, cutting-edge technology, and
+                the desire to create seamless user experiences. I draw motivation from problem-solving and turning
+                visions into dynamic digital realities."</p>
 
+            <iframe class="inspire-video" width="560" height="315"
+                src="https://www.youtube.com/embed/oF3-2vxj8XU?si=OEi6Z9pfIlM7biog" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
+        <!-- My Inspiration Ends Here -->
+
+        <!-- My Current Target Starts Here -->
+        <section class="Skill-section">
+            <h3 class="Section-title">My Current Target</h3>
+            <p class="section-description">"My inspiration stems from innovative designs, cutting-edge technology, and
+                the desire to create seamless user experiences. I draw motivation from problem-solving and turning
+                visions into dynamic digital realities."</p>
+
+            <div class="skills-container">
+                <div class="skills">
+                    <img src="assets/html.png" alt="image">
+                    <h4 class="skill-title">HTML</h4>
+                    <p class="skill-description">HTML5 is the latest version of HTML. It improves web pages with new
+                        elements, multimedia support, and better performance. It's simple to use, making web development
+                        more efficient and fun</p>
+                    <a href="http://">Learn More</a>
+                </div>
+                <div class="skills">
+                    <img src="assets/css.png" alt="image">
+                    <h4 class="skill-title">CSS</h4>
+                    <p class="skill-description">
+                        CSS (Cascading Style Sheets) styles websites by controlling layout, colors, fonts, and spacing.
+                        It separates content from design, making web pages look attractive and improving user
+                        experience.</p>
+                    <a href="http://">Learn More</a>
+                </div>
+                <div class="skills">
+                    <img src="assets/js.png" alt="image">
+                    <h4 class="skill-title">JS</h4>
+                    <p class="skill-description">JavaScript is a programming language used to create interactive
+                        websites. It helps make web pages dynamic by allowing features like animations, forms, and
+                        real-time updates. It's essential for web development.</p>
+                    <a href="http://">Learn More</a>
+                </div>
+            </div>
         </section>
 
     </main>
