added the support container

--- a/index.html
+++ b/index.html
@@ -100,21 +100,21 @@
 
         <!-- My Current Target Starts Here -->
         <section class="Skill-section">
-            <h3 class="Section-title">My Current Target</h3>
+            <h3 class="section-title">My Current Target</h3>
             <p class="section-description">"My inspiration stems from innovative designs, cutting-edge technology, and
                 the desire to create seamless user experiences. I draw motivation from problem-solving and turning
                 visions into dynamic digital realities."</p>
 
             <div class="skills-container">
-                <div class="skills">
-                    <img src="assets/html.png" alt="image">
+                <div class="skills skill-bg-01">
+                    <img class="img" src="assets/html.png" alt="image">
                     <h4 class="skill-title">HTML</h4>
                     <p class="skill-description">HTML5 is the latest version of HTML. It improves web pages with new
                         elements, multimedia support, and better performance. It's simple to use, making web development
                         more efficient and fun</p>
                     <a href="http://">Learn More</a>
                 </div>
-                <div class="skills">
+                <div class="skills skill-bg-02">
                     <img src="assets/css.png" alt="image">
                     <h4 class="skill-title">CSS</h4>
                     <p class="skill-description">
@@ -123,9 +123,9 @@
                         experience.</p>
                     <a href="http://">Learn More</a>
                 </div>
-                <div class="skills">
+                <div class="skills skill-bg-03">
                     <img src="assets/js.png" alt="image">
-                    <h4 class="skill-title">JS</h4>
+                    <h4 class="skill-title">JavaScript</h4>
                     <p class="skill-description">JavaScript is a programming language used to create interactive
                         websites. It helps make web pages dynamic by allowing features like animations, forms, and
                         real-time updates. It's essential for web development.</p>
@@ -136,6 +136,15 @@
 
     </main>
     <footer>
+        <div class="support-container">
+            <div class="support-content">
+                <h1 class="Footer-title">I need Support</h1>
+                <p class="footer-description">Get the help you need with our 24/7 support team, ready to assist you
+                    anytime</p>
+                <input type="text" class="text">
+                <button class="submit-btn">Submit</button>
+            </div>
+        </div>
 
     </footer>
 </body>
