added the footer section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="banner-description">"With a strong passion for technology and coding, I'm on a journey to refining
                 my skills and turning my
                 dream of becoming a developer into reality."</p>
-            <button class="contact-btn">Contact with me</button>
+            <button class="banner-contact-btn">Contact with me</button>
 
         </div>
     </header>
@@ -107,7 +107,7 @@
 
             <div class="skills-container">
                 <div class="skills skill-bg-01">
-                    <img class="img" src="assets/html.png" alt="image">
+                    <img class="im" src="assets/html.png" alt="image">
                     <h4 class="skill-title">HTML</h4>
                     <p class="skill-description">HTML5 is the latest version of HTML. It improves web pages with new
                         elements, multimedia support, and better performance. It's simple to use, making web development
@@ -133,19 +133,30 @@
                 </div>
             </div>
         </section>
+        <!--I Need Support Starts Here-->
+        <section class="support-section-container">
+            <div class="support-content">
+                <h4 class="content-title">I need Support</h4>
+                <p class="content-description">"Get the help you need with our 24/7 support team, ready to assist you
+                    anytime."</p>
+                <input class="text-area" type="text" placeholder="Suggest me or any feedback for me">
+                <button class="submit-btn">Submit</button>
+            </div>
+
+        </section>
 
     </main>
     <footer>
-        <div class="support-container">
-            <div class="support-content">
-                <h1 class="Footer-title">I need Support</h1>
-                <p class="footer-description">Get the help you need with our 24/7 support team, ready to assist you
-                    anytime</p>
-                <input type="text" class="text">
-                <button class="submit-btn">Submit</button>
+        <div class="footer-container">
+            <div class="footer-content">
+                <h4 class="footer-text"> An Open Commitment by S.K</h4>
+            </div>
+            <div class="footer-icons">
+                <img src="assets/facebook.png" alt="facebook icon">
+                <img src="assets/github.png" alt="github icon">
+                <img src="assets/linkedin-icon 1.png" alt="linkedin icon">
             </div>
         </div>
-
     </footer>
 </body>
 
