added all the update

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="banner-description">"With a strong passion for technology and coding, I'm on a journey to refining
                 my skills and turning my
                 dream of becoming a developer into reality."</p>
-            <button class="banner-contact-btn">Contact with me</button>
+            <a href="#footer-container"><button class="banner-contact-btn">Contact with me</button></a>
 
         </div>
     </header>
@@ -147,14 +147,18 @@
 
     </main>
     <footer>
-        <div class="footer-container">
+        <div id="footer-container">
             <div class="footer-content">
                 <h4 class="footer-text"> An Open Commitment by S.K</h4>
             </div>
             <div class="footer-icons">
-                <img src="assets/facebook.png" alt="facebook icon">
-                <img src="assets/github.png" alt="github icon">
-                <img src="assets/linkedin-icon 1.png" alt="linkedin icon">
+                <a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png"
+                        alt="facebook icon"></a>
+
+                <a href="https://github.com/" target="_blank"><img src="assets/github.png" alt="github icon"></a>
+
+                <a href="https://bd.linkedin.com/" target="_blank"><img src="assets/linkedin-icon 1.png"
+                        alt="linkedin icon"></a>
             </div>
         </div>
     </footer>
