--- a/index.html
+++ b/index.html
@@ -145,9 +145,10 @@
                 <h4 class="footer-text"> An Open Commitment by S.K</h4>
             </div>
             <div class="footer-icons">
-                <a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png"
-                        alt="facebook icon"></a>
-                <a href="https://github.com/" target="_blank"><img src="assets/github.png" alt="github icon"></a>
+                <a href="https://www.facebook.com/groups/missionwebdevelopment10/?multi_permalinks=823211376469945%2C823065723151177%2C822776713180078%2C822567836534299%2C822688846522198%2C822624523195297%2C822063856584697%2C821974686593614%2C821958709928545%2C821514503306299&notif_id=1720334566252220&notif_t=group_highlights&ref=notif"
+                    target="_blank"><img src="assets/facebook.png" alt="facebook icon"></a>
+                <a href="https://github.com/ProgrammingHero1" target="_blank"><img src="assets/github.png"
+                        alt="github icon"></a>
                 <a href="https://bd.linkedin.com/" target="_blank"><img src="assets/linkedin-icon 1.png"
                         alt="linkedin icon"></a>
             </div>
